--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
