Open Graph Meta Tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
+    <!--Open Graph Meta Tags-->
+    <meta property="og:title" content="WDD 230 Index">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://cdn.audleytravel.com/1050/749/79/1346501-old-state-capitol-springfield-illinois.webp">
+    <meta property="og:url" content="https://echlarson.github.io/wdd230/">
 </head>
 <body>
     <header>
@@ -50,4 +55,4 @@
     <script src="scripts/getdates.js"></script>
 </body>
 </html>
-<!--Last Updated 4/27/2024-->
+<!--Last Updated 5/1/2024-->
