--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course assignment portal. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
     <!--Open Graph Meta Tags-->
