--- a/lesson02/media-query.html
+++ b/lesson02/media-query.html
@@ -6,12 +6,26 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's lesson two assignment. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/media-query.css">
     <link rel="stylesheet" href="styles/media-query-large.css">
-
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Media Query Example</h1>
+    </header>
+    <main>
+        <section>
+            <h2>1 Nephi 11:17</h2>
+            <p>17 And I said unto him: I know that he loveth his children; nevertheless, I do not know the meaning of all things.</p>
+        </section>
+        <section>
+            <h2>Nahum 1:7</h2>
+            <p>7 The Lord is good, a strong hold in the day of trouble; and he knoweth them that trust in him.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Elizabeth Chlarson</p>
+    </footer>
 </body>
 </html>
