--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 Index">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cdn.audleytravel.com/1050/749/79/1346501-old-state-capitol-springfield-illinois.webp">
+    <meta property="og:image" content="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/07/3d/83/42/illinois-state-capitol.jpg?w=1200&h=-1&s=1">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/">
 </head>
 <body>
