--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 Index">
@@ -21,11 +22,13 @@
         <h1>Elizabeth Chlarson</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/10?lang=eng&id=p14-p15#p14" target="_blank">Scripture</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/10?lang=eng&id=p14-p15#p14" target="_blank">Scripture</a></li>
+        </ul>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
