--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01: <a href="#">Future Assignment</a></li>
-                <li>02: <a href="#">Future Assignment</a></li>
+                <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
+                <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design Principles</a> |
+                    <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a></li> 
                 <li>03: <a href="#">Future Assignment</a></li>
                 <li>04: <a href="#">Future Assignment</a></li>
                 <li>05: <a href="#">Future Assignment</a></li>
