--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -8,7 +8,8 @@
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    <!--Link three css files for base, medium, and large-->
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="favicon.ico">
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 Index">
@@ -21,32 +22,30 @@
         <h1>Design Principles Document</h1>
         <h3> Elizabeth Chlarson</h2>
     </header>
-    <main>
-        <section>
-            <h2>Visual Hierarchy</h2>
-            <article>
-                <a href="#">Company Name</a>
-                <img src="#" alt="Visual Hierarchy Example">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </article>
-        </section>
-        <section>
+    <div class="card1">
+        <h2>Visual Hierarchy</h2>
+        <article>
+            <a href="#">Company Name</a>
+            <img src="#" alt="Visual Hierarchy Example">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </article>
+        </div>
+        <div class="card2">
             <h2>Rule of Thirds</h2>
             <article>
                 <a href="#">Company Name</a>
                 <img src="#" alt="Rule of Thirds Example"> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
-        </section>
-        <section>
+        </div>
+        <div class="card3">
             <h2>White Space and Clean Design</h2>
             <article>
                 <a href="#">Company Name</a>
                 <img src="#" alt="White Space and Clean Design Example"> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
             </article>
-        </section>
-    </main>
+        </div>
     <footer>
         <p>©2024 | Elizabeth Chlarson | WDD230
     </footer>
