Update Index Links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <ul>
                 <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
                 <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design Principles</a> |
-                    <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a></li> 
+                    <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
+                    <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
                 <li>03: <a href="#">Future Assignment</a></li>
                 <li>04: <a href="#">Future Assignment</a></li>
                 <li>05: <a href="#">Future Assignment</a></li>
