--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -6,6 +6,7 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's lesson 2 assignment. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
+    <!--Responsive Style Sheets-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
