dp pictues added

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -26,24 +26,24 @@
     <div class="card1">
         <h2>Visual Hierarchy</h2>
         <article>
-            <a href="#">Company Name</a>
-            <img src="#" alt="Visual Hierarchy Example">
+            <a href="https://www.thechurchnews.com/">Church News</a>
+            <img src="images/church-news-screenshot.jpg" alt="Visual Hierarchy Example">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
         </div>
         <div class="card2">
             <h2>Rule of Thirds</h2>
             <article>
-                <a href="#">Company Name</a>
-                <img src="#" alt="Rule of Thirds Example"> 
+                <a href="https://stlzoo.org/">Saint Louis Zoo</a>
+                <img src="images/saint-louis-zoo-screenshot.jpg" alt="Rule of Thirds Example"> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
         </div>
         <div class="card3">
             <h2>White Space and Clean Design</h2>
             <article>
-                <a href="#">Company Name</a>
-                <img src="#" alt="White Space and Clean Design Example"> 
+                <a href="https://nussbaum.com/">Nussbaum</a>
+                <img src="images/nussbaum-screenshot.jpg" alt="White Space and Clean Design Example"> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
             </article>
         </div>
