--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -26,25 +26,25 @@
     <div class="card1">
         <h2>Visual Hierarchy</h2>
         <article>
-            <a href="https://www.thechurchnews.com/">Church News</a>
+            <a href="https://www.thechurchnews.com/">Church News</a><br>
             <img src="images/church-news-screenshot.jpg" alt="Visual Hierarchy Example">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>The Church News website is a good example of the design principle, visual hierarchy, because of the way the designer used a bold background in the header to draw your eyes there first. Then a headings in varying weights to pull your attention to important, or current news first. </p>
         </article>
         </div>
         <div class="card2">
             <h2>Rule of Thirds</h2>
             <article>
-                <a href="https://stlzoo.org/">Saint Louis Zoo</a>
+                <a href="https://stlzoo.org/">Saint Louis Zoo</a><br>
                 <img src="images/saint-louis-zoo-screenshot.jpg" alt="Rule of Thirds Example"> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>The Saint Louis Zoo website uses a wide variety of saturated colors and several div elements to create a very visually appealing block layout. This is a good example of the rule of thirds because of the way the designer used these elements to create a unique visual hierarchy and align key features and buttons.</p>
             </article>
         </div>
         <div class="card3">
             <h2>White Space and Clean Design</h2>
             <article>
-                <a href="https://nussbaum.com/">Nussbaum</a>
+                <a href="https://nussbaum.com/">Nussbaum</a><br>
                 <img src="images/nussbaum-screenshot.jpg" alt="White Space and Clean Design Example"> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+                <p>It is important to note that white space is not always white. The Nussbaum website is a great example of white space, or empty space, that help bolden and enhance their message. This designer has cleverly placed a video behind the text to create white space that gives you "room to breath" while still providing content.</p> 
             </article>
         </div>
     <footer>
