--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design Principles</a> |
                     <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
                     <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
-                <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a></li>
+                <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a> | 
+                    <a href="https://codepen.io/EChlarson/pen/BaeaayL?editors=1100">CSS Pseudo-elements</a> | 
+                    <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
                 <li>04: <a href="#">Future Assignment</a></li>
                 <li>05: <a href="#">Future Assignment</a></li>
                 <li>06: <a href="#">Future Assignment</a></li>
