--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <img src="images/elizabeth_chlarson_profile.webp" alt="Profile Image">
         <h1>Elizabeth Chlarson</h1>
     </header>
-    <nav>
+    <button id="menu"></button>
+    <nav class="navigation">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="chamber/">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
@@ -61,7 +62,7 @@
         <p>©2024 | Elizabeth Chlarson | Illinois</p>
         <p id="lastModified"> Last Updated 4/27/2024</p>
     </footer>
+    <script src="scripts/hamburger.js"></script>
     <script src="scripts/getdates.js"></script>
 </body>
 </html>
-<!--Last Updated 5/1/2024-->
