chamber site update

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -17,8 +17,9 @@
     <header>
         <h1>Chamber Name</h1>
     </header>
-    <nav>
-        <a href="#">Home</a>
+    <button id="menu"></button>
+    <nav class="navigation">
+        <a href="#" class="active">Home</a>
         <a href="#">Contact</a>
         <a href="#">About</a>
         <a href="#">Events</a>
@@ -48,10 +49,12 @@
         <p>Chamber Name | ©2024 </p>
         <!--Social Media Links-->
         <nav class="social-links">
-            <a href="https://www.facebook.com/"><img src="#" alt="Facebook"></a>
-            <a href="https://www.instagram.com/"><img src="#" alt="Instagram"></a>
-            <a href="https://www.tiktok.com"><img src="#" alt="TikTok"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
+            <a href="https://www.tiktok.com"><img src="images/tiktok-icon.png" alt="TikTok"></a>
         </nav>
     </footer>
+    <!--JavaScript-->
+    <script src="scripts/hamburger.js"></script>
 </body>
 </html>
