--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,11 +7,12 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course assignment portal. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
+    <!--Open Graph Meta Tags-->
     <!--Stylesheets-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <!--Open Graph Meta Tags-->
 </head>
 <body>
     <header>
