chamber site plan

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -16,38 +16,52 @@
 </head>
 <body>
     <header>
-        <h1>Chamber Name</h1>
+        <h1>Riverstone Chamber of Commerce</h1>
     </header>
     <button id="menu"></button>
     <nav class="navigation">
         <a href="#" class="active">Home</a>
-        <a href="#">Contact</a>
-        <a href="#">About</a>
+        <a href="#">Advocacy</a>
+        <a href="#">Resources</a>
         <a href="#">Events</a>
     </nav>
     <main>
         <section class="intro">
             <img href="#" alt="img">
-            <h2>Wireframe Draft / Introduction</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2>Introduction</h2>
+            <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
+                local events. Riverstone is a bustling city named for its nearby National Park, with 
+                bustling night life and many local events to help you network. This site will provide you 
+                with local events, resources for business owners, and provide information on local 
+                business polices.</p>
         </section>
-        <section class="events">
+        <section>
             <article>
-                <img href="#" alt="img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3>Color Schema</h3>
+                <img href="images/style-colors.png" alt="color-schema">
+                <p>These colors reflect the calm and knowledgable attitudes of our members and create 
+                    a comfortable and trusting feeling for visitors.</p>
             </article>
             <article>
-                <img href="#" alt="img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3>Typography</h3>
+                <h3>Oswald</h3>
+                <p>Source Sans 3</p>
             </article>
             <article>
-                <img href="#" alt="img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3>Scenarios</h3>
+                <p>What events are avlible for local business owners?<br>
+                    What resources are avalible for chamber members?<br>
+                    How do you become a member?</p>
             </article>
+        </section>
+        <section>
+                <h3>Wireframe</h3>
+                <img href="#" alt="mobile-view">
+                <img href="#" alt="large-view">
         </section>
     </main>
     <footer>
-        <p>Chamber Name | ©2024 </p>
+        <p>Riverstone Chamber of Commerce </p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
