chamber site plan update

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -57,7 +57,7 @@
         <section>
                 <h3>Wireframe</h3>
                 <img href="#" alt="mobile-view">
-                <img href="#" alt="large-view">
+                <img href="images/large-wireframe.png" alt="large-view">
         </section>
     </main>
     <footer>
