chamber site plan color fix

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -45,7 +45,7 @@
             <article>
                 <h3>Typography</h3>
                 <h3>Oswald</h3>
-                <p>Source Sans 3</p>
+                <p>Quattrocento</p>
             </article>
             <article>
                 <h3>Scenarios</h3>
