chamber site plan final

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <section class="intro">
-            <img href="#" alt="img">
+            <img src="#" alt="img">
             <h2>Introduction</h2>
             <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
                 local events. Riverstone is a bustling city named for its nearby National Park, with 
@@ -38,7 +38,7 @@
         <section>
             <article>
                 <h3>Color Schema</h3>
-                <img href="images/style-colors.png" alt="color-schema">
+                <img src="images/style-colors.png" alt="color-schema">
                 <p>These colors reflect the calm and knowledgable attitudes of our members and create 
                     a comfortable and trusting feeling for visitors.</p>
             </article>
@@ -56,8 +56,8 @@
         </section>
         <section>
                 <h3>Wireframe</h3>
-                <img href="#" alt="mobile-view">
-                <img href="images/large-wireframe.png" alt="large-view">
+                <img src="images/mobile-wireframe.png" alt="mobile-view">
+                <img src="images/large-wireframe.png" alt="large-view">
         </section>
     </main>
     <footer>
