--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
     <!--Stylesheets-->
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
