--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/10?lang=eng&id=p14-p15#p14" target="_blank">Scripture</a></li>
         </ul>
