--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,6 +39,7 @@
                 bustling night life and many local events to help you network. This site will provide you 
                 with local events, resources for business owners, and provide information on local 
                 business polices.</p>
+            <button>Click Me</button>
         </section>
         <section>
             <article>
@@ -66,7 +67,7 @@
         </section>
     </main>
     <footer>
-        <p>Riverstone Chamber of Commerce </p>
+        <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
