--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,40 +31,38 @@
         <a href="#">Events</a>
     </nav>
     <main>
-        <section class="intro">
-            <img src="#" alt="img">
-            <h2>Introduction</h2>
-            <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
-                local events. Riverstone is a bustling city named for its nearby National Park, with 
-                bustling night life and many local events to help you network. This site will provide you 
-                with local events, resources for business owners, and provide information on local 
-                business polices.</p>
-            <button>Click Me</button>
-        </section>
-        <section>
+        <div class="hero">
+            <img src="images/architecture-1868667_1280 (1).jpg" alt="img">
             <article>
-                <h3>Color Schema</h3>
+                <h2>Welcome</h2>
+                <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
+                    local events. Riverstone is a bustling city named for its nearby National Park, with 
+                    bustling night life and many local events to help you network. This site will provide you 
+                    with local events, resources for business owners, and provide information on local 
+                    business polices.</p>
+                <button>Become a Member</button>
+            </article>
+        </div>
+        <div class="boxes">
+            <article>
                 <img src="images/style-colors.png" alt="color-schema">
+                <h3>Color Schema</h3>
                 <p>These colors reflect the calm and knowledgable attitudes of our members and create 
                     a comfortable and trusting feeling for visitors.</p>
             </article>
             <article>
-                <h3>Typography</h3>
+                <img src="images/style-colors.png" alt="color-schema">
                 <h3>Oswald</h3>
                 <p>Quattrocento</p>
             </article>
             <article>
+                <img src="images/style-colors.png" alt="color-schema">
                 <h3>Scenarios</h3>
                 <p>What events are avlible for local business owners?<br>
                     What resources are avalible for chamber members?<br>
                     How do you become a member?</p>
             </article>
-        </section>
-        <section>
-                <h3>Wireframe</h3>
-                <img src="images/mobile-wireframe.png" alt="mobile-view">
-                <img src="images/large-wireframe.png" alt="large-view">
-        </section>
+        </div>
     </main>
     <footer>
         <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
