chamber mobile view

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,22 +45,28 @@
         </div>
         <div class="boxes">
             <article>
-                <img src="images/style-colors.png" alt="color-schema">
-                <h3>Color Schema</h3>
-                <p>These colors reflect the calm and knowledgable attitudes of our members and create 
-                    a comfortable and trusting feeling for visitors.</p>
+                <img src="images/boots-1867379_1280 (1).jpg" alt="boots">
+                <div class="border">
+                    <h3>Color Schema</h3>
+                    <p>These colors reflect the calm and knowledgable attitudes of our members and create 
+                        a comfortable and trusting feeling for visitors.</p>
+                </div>
             </article>
             <article>
-                <img src="images/style-colors.png" alt="color-schema">
-                <h3>Oswald</h3>
-                <p>Quattrocento</p>
+                <img src="images/city-8450817_1280 (1).jpg" alt="city">
+                <div class="border">
+                    <h3>Oswald</h3>
+                    <p>Quattrocento</p>
+                </div>
             </article>
             <article>
-                <img src="images/style-colors.png" alt="color-schema">
-                <h3>Scenarios</h3>
-                <p>What events are avlible for local business owners?<br>
+                <img src="images/ticket-2974645_1280 (1).jpg" alt="tickets">
+                <div class="border">
+                    <h3>Scenarios</h3>
+                    <p>What events are avlible for local business owners?<br>
                     What resources are avalible for chamber members?<br>
                     How do you become a member?</p>
+                </div>
             </article>
         </div>
     </main>
