--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,32 +40,35 @@
                     bustling night life and many local events to help you network. This site will provide you 
                     with local events, resources for business owners, and provide information on local 
                     business polices.</p>
-                <button>Become a Member</button>
+                <button class="button">Become a Member</button>
             </article>
         </div>
         <div class="boxes">
             <article>
+                <img src="images/ticket-2974645_1280 (1).jpg" alt="tickets">
+                <div class="border">
+                    <h3>Experince</h3>
+                    <p>What’s your idea of a good time? With many local attractions 
+                        and scheduled events there is always something to do. </p>
+                    <button class="button">Calendar</button>
+                </div>
+            </article>
+            <article>
                 <img src="images/boots-1867379_1280 (1).jpg" alt="boots">
                 <div class="border">
-                    <h3>Color Schema</h3>
-                    <p>These colors reflect the calm and knowledgable attitudes of our members and create 
-                        a comfortable and trusting feeling for visitors.</p>
+                    <h3>Get Away</h3>
+                    <p>Do you need some time away? Nearby camping, fishing, and hiking 
+                        can provide a beautiful escape.</p>
+                    <button class="button">Park Map</button>
                 </div>
             </article>
             <article>
                 <img src="images/city-8450817_1280 (1).jpg" alt="city">
                 <div class="border">
-                    <h3>Oswald</h3>
-                    <p>Quattrocento</p>
-                </div>
-            </article>
-            <article>
-                <img src="images/ticket-2974645_1280 (1).jpg" alt="tickets">
-                <div class="border">
-                    <h3>Scenarios</h3>
-                    <p>What events are avlible for local business owners?<br>
-                    What resources are avalible for chamber members?<br>
-                    How do you become a member?</p>
+                    <h3>Stay</h3>
+                    <p>How do you relax? Our bread and breakfast as well as a five star 
+                        hotel provide a wide range of places to relax. </p>
+                    <button class="button">Book a Room</button>
                 </div>
             </article>
         </div>
