--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,8 +81,10 @@
             <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
             <a href="https://www.tiktok.com"><img src="images/tiktok-icon.png" alt="TikTok"></a>
         </nav>
+        <label> Last Modified: <span id="last-modification">Mon May 13 2024 20:00:54 GMT-0500 (Central Daylight Time)</span></label>
     </footer>
     <!--JavaScript-->
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/last-modified.js"></script>
 </body>
 </html>
