--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
                     <button class="button">Park Map</button>
                 </div>
             </article>
-            <article>
+            <article id="last-box">
                 <img src="images/city-8450817_1280 (1).jpg" alt="city">
                 <div class="border">
                     <h3>Stay</h3>
