--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
     </nav>
     <main>
         <div class="hero">
-            <img src="images/architecture-1868667_1280 (1).jpg" alt="img">
+            <picture><img src="images/architecture-1868667_1280 (1).jpg" alt="img"></picture>
             <article>
                 <h2>Welcome</h2>
                 <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
