--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
                 <div class="border">
                     <h3>Experince</h3>
                     <p>What’s your idea of a good time? With many local attractions 
-                        and scheduled events there is always something to do. </p>
+                        there is always something to do. </p>
                     <button class="button">Calendar</button>
                 </div>
             </article>
