--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </main>
     <footer>
         <p>©2024 | Elizabeth Chlarson | Illinois</p>
-        <p id="lastModified"> Last Updated 4/27/2024</p>
+        <label> Last Modified: <span id="last-modification">Mon May 13 2024 20:00:54 GMT-0500 (Central Daylight Time)</span></label>
     </footer>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/last-modified.js"></script>
 </body>
 </html>
