--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Elizabeth Chlarson">
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">>
+    <link rel="stylesheet" href="styles/base.css">
     <!--Open Graph Meta Tags-->
 </head>
 <body>
@@ -23,4 +23,5 @@
     <footer>
         <p>©2024 | Elizabeth Chlarson | WDD 230</p>
     </footer>
+    <script src="scripts/bom.js"></script>
 </body>
