--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                 <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a> | 
                     <a href="https://codepen.io/EChlarson/pen/BaeaayL?editors=1100">CSS Pseudo-elements</a> | 
                     <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
-                <li>04: <a href="https://codepen.io/EChlarson/pen/XWwbYed">CSS Pseudo-Classes</a> |
-                    <a href="#"></a></li>
-                <li>05: <a href="#">Future Assignment</a></li>
+                <li>04: <a href="https://codepen.io/EChlarson/pen/XWwbYed">CSS Pseudo-Classes</a>
+                <li>05: <a href="https://echlarson.github.io/wdd230/lesson05/bom.html">Book of Mormon Favorite Chapters Application</a></li>
                 <li>06: <a href="#">Future Assignment</a></li>
                 <li>07: <a href="#">Future Assignment</a></li>
                 <li>08: <a href="#">Future Assignment</a></li>
