--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,10 +25,12 @@
     </header>
     <button id="menu"></button>
     <nav class="navigation">
-        <a href="#" class="active">Home</a>
-        <a href="#">Advocacy</a>
-        <a href="#">Resources</a>
-        <a href="#">Events</a>
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Advocacy</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Events</a></li>
+        </ul>
     </nav>
     <main>
         <div class="hero">
