--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
+    <div id="mode">🌔</div>
     <header>
         <h1>Riverstone Chamber of Commerce</h1>
     </header>
@@ -88,5 +89,6 @@
     <!--JavaScript-->
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/last-modified.js"></script>
+    <script src="scripts/mode.js"></script>
 </body>
 </html>
