add sections to chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,6 +46,19 @@
                 <button class="button">Become a Member</button>
             </article>
         </div>
+        <div class="local">
+            <article>
+                <h3>Events</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi ipsum neque incidunt, 
+                    dolorum officiis. Minima at cupiditate soluta velit? Sed mollitia officiis aspernatur sequi 
+                    soluta consectetur inventore, reiciendis illum.</p>
+            </article>
+            <article>
+                <h3>Weather</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem ducimus molestiae 
+                    voluptate laborum fugit repellat!</p>
+            </article>
+        </div>
         <div class="boxes">
             <article>
                 <img src="images/ticket-2974645_1280 (1).jpg" alt="tickets">
