--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -11,15 +11,36 @@
     <!--Open Graph Meta Tags-->
 </head>
 <body>
-    <header>
-        <h1>📖 Book of Mormon - Top 10</h1>
-    </header>
-    <main>
-	    <label for="favchap">Enter Book and Chapter: </label>
-	    <input type="text" id="favchap" placeholder="Alma 5">
-	    <button type="submit">Add Chapter</button>
-	    <ul id="list"></ul>
-    </main>
+    <div class="favchap">
+        <header>
+            <h1>📖 Book of Mormon - Top 10</h1>
+        </header>
+        <div>
+	        <label for="favchap">Enter Book and Chapter: </label>
+	        <input type="text" id="favchap" placeholder="Alma 5">
+	        <button type="submit">Add Chapter</button>
+	        <ul id="list"></ul>
+        </div>
+    </div>
+    <div class="reference">
+        <h1>Reference Table</h1>
+        <p>Introduction and Witnesses<br>
+            1 Nephi<br>
+            2 Nephi<br>
+            Jacob<br>
+            Enos<br>
+            Jarom<br>
+            Omni<br>
+            Words of Mormon<br>
+            Mosiah<br>
+            Alma<br>
+            Helaman<br>
+            3 Nephi<br>
+            4 Nephi<br>
+            Mormon<br>
+            Ether<br>
+            Moroni</p>
+    </div>
     <footer>
         <p>©2024 | Elizabeth Chlarson | WDD 230</p>
     </footer>
