--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
                 <li>04: <a href="https://codepen.io/EChlarson/pen/XWwbYed">CSS Pseudo-Classes</a>
                 <li>05: <a href="https://echlarson.github.io/wdd230/lesson05/bom.html">Book of Mormon Favorite Chapters Application</a></li>
-                <li>06: <a href="lesson03/images/landscape2.webp">WebP</a></li>
+                <li>06: <a href="lesson03/images/landscape2.webp">WebP</a> | 
+                    <a href="https://echlarson.github.io/wdd230/lesson06/responsive-images.html">responsive Images</a></li>
                 <li>07: <a href="#">Future Assignment</a></li>
                 <li>08: <a href="#">Future Assignment</a></li>
                 <li>09: <a href="#">Future Assignment</a></li>
