--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
-                <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design Principles</a> |
+                <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design</a> |
                     <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
                     <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
                 <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a> | 
