--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/nauvoo-mobile.webp" media="(max-width: 400px)">
+                <img src="images/nauvoo-large.webp" alt="Nauvoo Temple" width="960" height="480">
+            </picture>
+            <div id="temple-lable">
+                <h2>Nauvoo Temple<br>
+                    Located in Nauvoo Illinois</h2>
+            </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
