--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
 <body>
     <div id="mode">🌔</div>
     <header>
-        <h1>Riverstone Chamber of Commerce</h1>
+        <img src="images/Logo.webp" alt="Logo">
     </header>
     <main>
         <nav class="navigation">
@@ -55,8 +55,13 @@
             </article>
             <article>
                 <h3>Weather</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem ducimus molestiae 
-                    voluptate laborum fugit repellat!</p>
+                <div class="weather">
+                    <ul>
+                        <li><span id=temp></span></li>
+                        <li><span id=wSpeed></span></li>
+                        <li><span id=windchill></span></li>
+                    </ul>
+                </div>
             </article>
         </div>
         <div class="boxes">
@@ -93,9 +98,9 @@
         <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
-            <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.tiktok.com"><img src="images/tiktok-icon.png" alt="TikTok"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram-icon.webp" alt="Instagram"></a>
+            <a href="https://www.tiktok.com"><img src="images/tiktok-icon.webp" alt="TikTok"></a>
         </nav>
         <label> Last Modified: <span id="last-modification">Mon May 13 2024 20:00:54 GMT-0500 (Central Daylight Time)</span></label>
     </footer>
@@ -103,5 +108,6 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/last-modified.js"></script>
     <script src="scripts/mode.js"></script>
+    <script src="scripts/windchill.js"></script>
 </body>
 </html>
