--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <picture><img src="images/architecture-1868667_1280 (1).jpg" alt="img"></picture>
+            <picture><img src="images/architecture-1868667_1280.jpg" alt="img"></picture>
             <article>
                 <h2>Welcome</h2>
                 <p>Welcome to Riverstone Chamber of Commerce website, where you can find updated news and 
@@ -66,7 +66,7 @@
         </div>
         <div class="boxes">
             <article>
-                <img src="images/ticket-2974645_1280 (1).jpg" alt="tickets">
+                <img src="images/ticket-2974645_1280.jpg" alt="tickets">
                 <div class="border">
                     <h3>Experince</h3>
                     <p>What’s your idea of a good time? With many local attractions 
@@ -75,7 +75,7 @@
                 </div>
             </article>
             <article>
-                <img src="images/boots-1867379_1280 (1).jpg" alt="boots">
+                <img src="images/boots-1867379_128.jpg" alt="boots">
                 <div class="border">
                     <h3>Get Away</h3>
                     <p>Do you need some time away? Nearby camping, fishing, and hiking 
@@ -84,7 +84,7 @@
                 </div>
             </article>
             <article id="last-box">
-                <img src="images/city-8450817_1280 (1).jpg" alt="city">
+                <img src="images/city-8450817_1280.jpg" alt="city">
                 <div class="border">
                     <h3>Stay</h3>
                     <p>How do you relax? Our bread and breakfast as well as a five star 
