--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#">Events</a></li>
             </ul>
         </nav>
-        <div class="hero">
+        <!--<div class="hero">
             <picture><img src="images/architecture-1868667_1280.jpg" alt="img"></picture>
             <article>
                 <h2>Welcome</h2>
@@ -44,6 +44,18 @@
                     with local events, resources for business owners, and provide information on local 
                     business polices.</p>
                 <button class="button">Become a Member</button>
+            </article>
+        </div>-->
+        <div class="hero">
+            <picture>
+                <source srcset="images/small-wdd230-org.webp" media="(max-width: 500px)">
+                <source srcset="images/medium-wdd230-org.webp" media="(max-width: 1000px)">
+                <img src="images/large-wdd230-org.webp" alt="Office Workers" width="1500" height="750">
+            </picture>
+            <article>
+                <h2 id="small">Small</h2>
+                <h2 id="medium">Medium</h2>
+                <h2 id="large">Large</h2>
             </article>
         </div>
         <div class="local">
@@ -66,7 +78,11 @@
         </div>
         <div class="boxes">
             <article>
-                <img src="images/ticket-2974645_1280.jpg" alt="tickets">
+                <picture>
+                    <source srcset="images/small-ticket.webp" media="(max-width: 200px)">
+                    <source srcset="images/medium-ticket.webp" media="(max-width: 350px)">
+                    <img src="images/large-ticket.webp" alt="Tickets" width="700" height="526">
+                </picture>
                 <div class="border">
                     <h3>Experince</h3>
                     <p>What’s your idea of a good time? With many local attractions 
@@ -75,7 +91,11 @@
                 </div>
             </article>
             <article>
-                <img src="images/boots-1867379_128.jpg" alt="boots">
+                <picture>
+                    <source srcset="images/small-boots.webp" media="(max-width: 200px)">
+                    <source srcset="images/medium-boots.webp" media="(max-width: 350px)">
+                    <img src="images/large-boots.webp" alt="Tickets" width="700" height="526">
+                </picture>
                 <div class="border">
                     <h3>Get Away</h3>
                     <p>Do you need some time away? Nearby camping, fishing, and hiking 
@@ -84,7 +104,11 @@
                 </div>
             </article>
             <article id="last-box">
-                <img src="images/city-8450817_1280.jpg" alt="city">
+                <picture>
+                    <source srcset="images/small-bridge.webp" media="(max-width: 200px)">
+                    <source srcset="images/medium-bridge.webp" media="(max-width: 350px)">
+                    <img src="images/large-bridge.webp" alt="Tickets" width="700" height="526">
+                </picture>
                 <div class="border">
                     <h3>Stay</h3>
                     <p>How do you relax? Our bread and breakfast as well as a five star 
