fix profile hero

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/nauvoo-mobile.webp" media="(max-width: 400px)">
-                <img src="images/nauvoo-large.webp" alt="Nauvoo Temple" width="960" height="480">
+                <source srcset="images/nauvoo-temple-small.webp" media="(max-width: 500px)">
+                <source srcset="images/nauvoo-temple-medium.webp" media="(max-width: 1000px)">
+                <img src="images/nauvoo-temple-large.webp" alt="Nauvoo Temple" width="1500" height="750">
             </picture>
             <div id="temple-lable">
                 <h2>Nauvoo Temple<br>
