--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -9,7 +9,7 @@
     <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
     <!--Styles-->
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="styles/base.css">
     <!--Open Graph Meta Tags-->
 </head>
 <body>
@@ -17,12 +17,13 @@
         <h1>Panda</h1>
     </header>
     <main>
-        <img loading="lazy" src="images/panda-1.webp" alt="Panda" width="400" height="600">
-        <img loading="lazy" src="images/red-panda-1.webp" alt="Red Panda" width="400" height="600">
-        <img loading="lazy" src="images/panda-2.webp" alt="Panda" width="400" height="600">
-        <img loading="lazy" src="images/panda-3.webp" alt="Panda" width="400" height="600">
-        <img loading="lazy" src="images/red-panda-2.webp" alt="Red Panda" width="400" height="600">
-        <img loading="lazy" src="images/panda-4.webp" alt="Panda" width="400" height="600">
+        <picture><img loading="lazy" src="images/panda-1.webp" alt="Panda" width="400" height="600"></picture>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi iusto hic sint tempora. Distinctio, voluptatem! Quas illum tenetur rem, dolore, sapiente enim harum itaque consectetur praesentium perferendis cum. Aut vitae praesentium at quo eum maxime voluptatem, rem labore omnis fuga voluptatibus soluta consequatur, quod repellat repellendus sed? Exercitationem magnam dolores omnis facilis! Minima eligendi dicta dolorem beatae facere voluptatibus corporis temporibus optio perferendis. Sequi hic molestiae dicta, debitis nulla laudantium eaque ea, quis voluptatem perferendis iusto itaque commodi laborum necessitatibus, cumque eligendi quaerat corrupti recusandae reiciendis. Quo aut obcaecati dolores repudiandae. Repellendus, quo quidem! Aperiam inventore laboriosam, qui optio illo corporis mollitia! Quis porro sit, accusamus aut dolorum at ullam delectus inventore architecto. Eaque recusandae dolor cumque harum sapiente, ad quos optio, adipisci earum, repellendus facere. Nemo deleniti atque necessitatibus dolorum libero quae voluptates eos, est error voluptate qui labore iusto, odit sunt aliquid rerum ipsum at nihil impedit vitae voluptatum doloremque! Ullam delectus, tempora quos earum nesciunt quae distinctio quas incidunt! Nisi, repudiandae alias corrupti, voluptas magnam totam libero vel quos aperiam fugiat impedit illum itaque. Asperiores inventore, facilis omnis saepe ea maiores harum dicta, velit perferendis error ad, fuga in vitae nobis? Eaque ipsum obcaecati quidem modi porro fugiat, temporibus ipsa impedit debitis unde soluta praesentium eum autem voluptate excepturi repellendus velit veritatis rerum in dicta. Omnis repudiandae voluptatum exercitationem dolorem et animi consectetur maxime minus! Obcaecati commodi soluta nam ipsa sunt, amet vitae, atque quod reiciendis minus mollitia quas! Doloremque amet quisquam, ullam animi sed, eveniet assumenda voluptates harum, expedita commodi velit at eligendi ducimus minima labore consequatur dolore deleniti ipsum? Illo accusamus inventore distinctio, repellat excepturi magnam aut nemo iusto animi dolor explicabo, dolorum quidem ipsum quibusdam quaerat dolore ad! Iste deserunt, doloremque dolorem, inventore sunt vero voluptatum eveniet officia reiciendis cum dicta maxime sequi saepe.</p>
+        <picture><img loading="lazy" src="images/red-panda-1.webp" alt="Red Panda" width="400" height="600"></picture>
+        <picture><img loading="lazy" src="images/panda-2.webp" alt="Panda" width="400" height="600"></picture>
+        <picture><img loading="lazy" src="images/panda-3.webp" alt="Panda" width="400" height="600"></picture>
+        <picture><img loading="lazy" src="images/red-panda-2.webp" alt="Red Panda" width="400" height="600"></picture>
+        <picture><img loading="lazy" src="images/panda-4.webp" alt="Panda" width="400" height="600"></picture>
     </main>
     <footer>
         <p>©2024 | Elizabeth Chlarson</p>
