--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -29,6 +29,7 @@
         <p>©2024 | Elizabeth Chlarson</p>
         <label> Last Modified: <span id="last-modification">Mon May 13 2024 20:00:54 GMT-0500 (Central Daylight Time)</span></label>
     </footer>
+    <!--Scripts-->
     <script src="scripts/last-modified.js"></script>
 </body>
 </html>
