--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
             <ul>
                 <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
                 <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design</a> |
-                    <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
-                    <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
+                        <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
+                        <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
                 <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a> | 
-                    <a href="https://codepen.io/EChlarson/pen/BaeaayL?editors=1100">CSS Pseudo-elements</a> | 
-                    <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
+                        <a href="https://codepen.io/EChlarson/pen/BaeaayL?editors=1100">CSS Pseudo-elements</a> | 
+                        <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
                 <li>04: <a href="https://codepen.io/EChlarson/pen/XWwbYed">CSS Pseudo-Classes</a>
                 <li>05: <a href="https://echlarson.github.io/wdd230/lesson05/bom.html">Book of Mormon Favorite Chapters Application</a></li>
                 <li>06: <a href="lesson03/images/landscape2.webp">WebP</a> | 
-                    <a href="https://echlarson.github.io/wdd230/lesson06/responsive-images.html">Responsive Images</a></li>
-                <li>07: <a href="https://echlarson.github.io/wdd230/lesson07/lazyload.html">Lazy Load</a></li>
+                        <a href="https://echlarson.github.io/wdd230/lesson06/responsive-images.html">Responsive Images</a></li>
+                <li>07: <a href="https://echlarson.github.io/wdd230/lesson07/lazyload.html">Lazy Load</a> |
+                        <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a></li>
                 <li>08: <a href="#">Future Assignment</a></li>
                 <li>09: <a href="#">Future Assignment</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
