--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,6 +73,9 @@
                         <li><span id=wSpeed></span></li>
                         <li><span id=windchill></span></li>
                     </ul>
+                    <ul>
+                        <li id="visits"><span class="label">Number of Visits: </span><span class="visits"></span></li>
+                    </ul>
                 </div>
             </article>
         </div>
@@ -133,5 +136,6 @@
     <script src="scripts/last-modified.js"></script>
     <script src="scripts/mode.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/page-visit-counter.js"></script>
 </body>
 </html>
