--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -38,8 +38,14 @@
             <!--Single Column-->
             <div id="visits">
                 <ul>
-                    <li><span class="label">Number of Visits: </span><span class="visits"></span></li>
+                    <li><span class="visits"></span></li>
                 </ul>
+                <!--localStorage to store the latest visit date
+                    -If this is the user's first visit, display "Welcome! Let us know if you have any questions.".
+                    -If the amount of time between visits is less than a day, display "Back so soon! Awesome!".
+                    -Otherwise, display the number of days in a message like this: "You last visited n days ago.", 
+                        where n is the actual, whole number of days between visits. If the number of days is 1, then 
+                        change the language to "day" not "days".-->
             </div>
             <div id="dem">
                 <h3>Demographics</h3>
@@ -57,9 +63,6 @@
                     <li>Thanksgiving Parade</li>
                 </ul>
             </div>
-            <div id="calendar">
-                <!--Add Calendar-->
-            </div>
             <div id="local">
                 <h3>Local Attractions</h3>
                 <ul>
@@ -68,53 +71,44 @@
                     <li>Zoo</li>
                 </ul>
             </div>
-            <!--localStorage to store the latest visit date
-                    -If this is the user's first visit, display "Welcome! Let us know if you have any questions.".
-                    -If the amount of time between visits is less than a day, display "Back so soon! Awesome!".
-                    -Otherwise, display the number of days in a message like this: "You last visited n days ago.", 
-                        where n is the actual, whole number of days between visits. If the number of days is 1, then 
-                        change the language to "day" not "days".-->
         </div>
         <div class="mArea">
             <figure>
                 <source srcset="images/peppers-small.webp" media="(max-width: 290px)">
                 <source srcset="images/peppers-med.webp" media="(max-width: 600px)">
                 <img loading="lazy" src="images/peppers-large.webp" alt="Farmers Market" width="1000" height="666">
-                <figurecaption>Picking Up Peppers at the Farmer's Market</figurecaption>
+                <figcaption>Picking Up Peppers at the Farmer's Market</figcaption>
             </figure>
             <figure>
                 <source srcset="images/pet-park-small.webp" media="(max-width: 290px)">
                 <source srcset="images/pet-park-med.webp" media="(max-width: 600px)">
                 <img loading="lazy" src="images/pet-park-large.webp" alt="Dog Park" width="1000" height="666">
-                <figurecaption>Playing Fetch in the Local Park</figurecaption>
+                <figcaption>Playing Fetch in the Local Park</figcaption>
             </figure>
             <figure>
                 <source srcset="images/polar-bear-small.webp" media="(max-width: 290px)">
                 <source srcset="images/polar-bear-med.webp" media="(max-width: 600px)">
                 <img loading="lazy" src="images/polar-bear-large.webp" alt="Zoo" width="1000" height="666">
-                <figurecaption>Saying Hello to Our Polar Bear Freind at the Zoo</figurecaption>
+                <figcaption>Saying Hello to Our Polar Bear Freind at the Zoo</figcaption>
             </figure>
             <figure>
                 <source srcset="images/water-park-small.webp" media="(max-width: 290px)">
                 <source srcset="images/water-park-med.webp"  media="(max-width: 600px)">
                 <img loading="lazy" src="images/water-park-large.webp" alt="Water Park" width="1000" height="666">
-                <figurecaption>Check Out the Slide at Our Water Park</figurecaption>
+                <figcaption>Check Out the Slide at Our Water Park</figcaption>
             </figure>
             <figure>
                 <source srcset="images/woman-gym-small.webp" media="(max-width: 290px)">
                 <source srcset="images/woman-gym-med.webp"  media="(max-width: 600px)">
                 <img loading="lazy" src="images/woman-gym-large.webp" alt="Gym" width="1000" height="666">
-                <figurecaption>Breaking a Sweat at the Gym</figurecaption>
+                <figcaption>Breaking a Sweat at the Gym</figcaption>
             </figure>
             <figure>
                 <source srcset="images/bumper-cars-small.webp" media="(max-width: 290px)">
                 <source srcset="images/bumper-cars-med.webp" media="(max-width: 600px)">
                 <img loading="lazy" src="images/bumper-cars-large.webp" alt="Amusement Park" width="1000" height="666">
-                <figurecaption>1.. 2.. 3.. GO!</figurecaption>
+                <figcaption>1.. 2.. 3.. GO!</figcaption>
             </figure>
-            <!--Images must not load until the user scrolls, use lazy loading-->
-            <!--Use a CSS property effect whenever a user hovers over the images in the gallery with their mouse. 
-                This effect design is your choice. **Do not apply this effect to the images in the mobile view.-->
         </div>
     </main>
     <footer>
@@ -131,6 +125,6 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/last-modified.js"></script>
     <script src="scripts/mode.js"></script>
-    <script src="scripts/page-visit-counter.js"></script>
+    <script src="scripts/latest-visit-date.js"></script>
 </body>
 </html>
