--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -11,9 +11,8 @@
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce | Discover">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
-    <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
+    <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/discover.html">
     <!--Stylesheets-->
-    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -40,12 +39,6 @@
                 <ul>
                     <li><span class="visits"></span></li>
                 </ul>
-                <!--localStorage to store the latest visit date
-                    -If this is the user's first visit, display "Welcome! Let us know if you have any questions.".
-                    -If the amount of time between visits is less than a day, display "Back so soon! Awesome!".
-                    -Otherwise, display the number of days in a message like this: "You last visited n days ago.", 
-                        where n is the actual, whole number of days between visits. If the number of days is 1, then 
-                        change the language to "day" not "days".-->
             </div>
             <div id="dem">
                 <h3>Demographics</h3>
