--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <li>06: <a href="lesson03/images/landscape2.webp">WebP</a> | 
                         <a href="https://echlarson.github.io/wdd230/lesson06/responsive-images.html">Responsive Images</a></li>
                 <li>07: <a href="https://echlarson.github.io/wdd230/lesson07/lazyload.html">Lazy Load</a> |
-                        <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a></li>
+                        <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a> |
+                        <a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
                 <li>08: <a href="#">Future Assignment</a></li>
                 <li>09: <a href="#">Future Assignment</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
