--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li>07: <a href="https://echlarson.github.io/wdd230/lesson07/lazyload.html">Lazy Load</a> |
                         <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a> |
                         <a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
-                <li>08: <a href="#">Future Assignment</a></li>
+                <li>08: <a href="https://echlarson.github.io/wdd230/lesson08/tablebuild.html">Table Build</a></li>
                 <li>09: <a href="#">Future Assignment</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
             </ul>
